--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
   "functions": {
     "api/ws.js": {
-      "runtime": "edge",
-      "regions": ["iad1"],
-      "memory": 128
+      "runtime": "edge"
     }
   },
   "routes": [
     {
       "src": "/ws",
       "dest": "/api/ws.js"
+    },
+    {
+      "src": "/",
+      "dest": "/public/index.html"
     }
   ]
 }
